Accessing API, working on admin form

--- a/oe-deal-tracker/admin/css/oe-deal-tracker-admin.css
+++ b/oe-deal-tracker/admin/css/oe-deal-tracker-admin.css
@@ -2,3 +2,19 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+ .product-cards {
+    display: flex;
+    flex-wrap: wrap;
+ }
+ .product-card {
+    padding: 10px;
+    width: 300px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+ .product-image img {
+    height: 200px;
+ }
